--- a/proiecttestare/src/main/resources/application.properties
+++ b/proiecttestare/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.messages.basename=lang/messages
+
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:mysql://localhost:3306/onlineshop
+spring.datasource.username=admin
+spring.datasource.password=nimda
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
